benchmarks/arms/chant-ec2-multiregion-search/us-east-1/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Outputs": {
    "expAmiName": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-AMIName"
      },
      "Value": {
        "Fn::Sub": "ami-${AWS::AccountId}-${AWS::Region}"
      }
    },
    "expDefaultSubnet1": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-DefaultPublicSubnetId1"
      },
      "Value": {
        "Ref": "defaultSubnetId1"
      }
    },
    "expDefaultSubnet2": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-DefaultPublicSubnetId2"
      },
      "Value": {
        "Ref": "defaultSubnetId2"
      }
    },
    "expDefaultVpcId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-DefaultVpcId"
      },
      "Value": {
        "Ref": "defaultVpcId"
      }
    },
    "expDefaultVpcInstanceId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-DefaultVPCInstanceId"
      },
      "Value": {
        "Fn::GetAtt": [
          "defaultVpcServer",
          "InstanceId"
        ]
      }
    },
    "expDefaultVpcInstanceIp": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PrivateIPOfInstanceWithDefaultVpc"
      },
      "Value": {
        "Fn::GetAtt": [
          "defaultVpcServer",
          "PrivateIp"
        ]
      }
    },
    "expHttpPort": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-OpenHTTPPort"
      },
      "Value": "80"
    },
    "expHttpsPort": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-OpenHTTPsPort"
      },
      "Value": "443"
    },
    "expInstanceId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-InstanceId"
      },
      "Value": {
        "Fn::GetAtt": [
          "webServer",
          "InstanceId"
        ]
      }
    },
    "expInstanceProfileName": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-InstanceProfileName"
      },
      "Value": {
        "Ref": "instanceProfile"
      }
    },
    "expLaunchTemplateInstanceId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-LaunchTemplateInstanceId"
      },
      "Value": {
        "Fn::GetAtt": [
          "launchTemplateServer",
          "InstanceId"
        ]
      }
    },
    "expLtIp": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PrivateIPOfInstanceWithLaunchTemplate"
      },
      "Value": {
        "Fn::GetAtt": [
          "launchTemplateServer",
          "PrivateIp"
        ]
      }
    },
    "expNumEc2": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-NUMEC2Running"
      },
      "Value": "4"
    },
    "expNumSubnets": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-NUMSubnets"
      },
      "Value": "1"
    },
    "expPrivateInstanceId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PrivateInstanceId"
      },
      "Value": {
        "Fn::GetAtt": [
          "privateServer",
          "InstanceId"
        ]
      }
    },
    "expPrivateInstanceIp": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PrivateInstancePrivateIp"
      },
      "Value": {
        "Fn::GetAtt": [
          "privateServer",
          "PrivateIp"
        ]
      }
    },
    "expPublicSubnetId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PublicSubnetId"
      },
      "Value": {
        "Fn::GetAtt": [
          "publicSubnet",
          "SubnetId"
        ]
      }
    },
    "expRestrictedAttr": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-RestrictedActionModifyInstanceAttribute"
      },
      "Value": "ec2:ModifyInstanceAttribute"
    },
    "expRestrictedMeta": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-RestrictedActionModifyInstanceMetadataOptions"
      },
      "Value": "ec2:ModifyInstanceMetadataOptions"
    },
    "expRoleName": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-RoleName"
      },
      "Value": {
        "Ref": "instanceRole"
      }
    },
    "expSecurityGroupId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-SecurityGroupId"
      },
      "Value": {
        "Fn::GetAtt": [
          "webSecurityGroup",
          "GroupId"
        ]
      }
    },
    "expSshPort": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-OpenSSHPort"
      },
      "Value": "22"
    },
    "expStackId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-StackId"
      },
      "Value": {
        "Fn::Sub": "${AWS::StackId}"
      }
    },
    "expStackName": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-StackName"
      },
      "Value": "ec2-multiregion-EC2-ks84v1fh12-us-east-1"
    },
    "expUnusedSecurityGroupId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-UnusedSecurityGroupId"
      },
      "Value": {
        "Fn::GetAtt": [
          "unusedSecurityGroup",
          "GroupId"
        ]
      }
    },
    "expVpcId": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-VpcId"
      },
      "Value": {
        "Fn::GetAtt": [
          "vpc",
          "VpcId"
        ]
      }
    },
    "expWebIp": {
      "Export": {
        "Name": "ec2-multiregion-EC2-ks84v1fh12-us-east-1-PrivateIPOfInstanceWithoutLaunchTemplate"
      },
      "Value": {
        "Fn::GetAtt": [
          "webServer",
          "PrivateIp"
        ]
      }
    }
  },
  "Parameters": {
    "defaultSubnetId1": {
      "Description": "First public subnet of the default VPC",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "defaultSubnetId2": {
      "Description": "Second public subnet of the default VPC",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "defaultVpcId": {
      "Description": "The account's default VPC id",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "defaultVpcServer": {
      "Properties": {
        "ImageId": "ami-0f3f13f145e66a0a3",
        "InstanceType": "t3.micro",
        "SubnetId": {
          "Ref": "defaultSubnetId1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyEC2Instance"
          }
        ]
      },
      "Type": "AWS::EC2::Instance"
    },
    "igw": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "igwAttachment": {
      "Properties": {
        "InternetGatewayId": {
          "Fn::GetAtt": [
            "igw",
            "InternetGatewayId"
          ]
        },
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "instanceProfile": {
      "Properties": {
        "InstanceProfileName": {
          "Fn::Sub": "instanceprofile-${AWS::AccountId}-${AWS::Region}"
        },
        "Roles": [
          {
            "Ref": "instanceRole"
          }
        ]
      },
      "Type": "AWS::IAM::InstanceProfile"
    },
    "instanceRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:ModifyInstanceAttribute",
                    "ec2:ModifyInstanceMetadataOptions"
                  ],
                  "Effect": "Deny",
                  "Resource": "*"
                }
              ],
              "Version": "2012-10-17"
            },
            "PolicyName": {
              "Fn::Sub": "policy-${AWS::AccountId}-${AWS::Region}"
            }
          }
        ],
        "RoleName": {
          "Fn::Sub": "role-${AWS::AccountId}-${AWS::Region}"
        }
      },
      "Type": "AWS::IAM::Role"
    },
    "launchTemplate": {
      "Properties": {
        "LaunchTemplateData": {
          "BlockDeviceMappings": [
            {
              "DeviceName": "/dev/xvda",
              "Ebs": {
                "VolumeSize": 8,
                "VolumeType": "gp3"
              }
            }
          ],
          "ImageId": "ami-0f3f13f145e66a0a3",
          "InstanceType": "t3.micro",
          "MetadataOptions": {
            "HttpTokens": "required"
          },
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "webSecurityGroup",
                "GroupId"
              ]
            }
          ]
        },
        "LaunchTemplateName": {
          "Fn::Sub": "lt-${AWS::AccountId}-${AWS::Region}"
        }
      },
      "Type": "AWS::EC2::LaunchTemplate"
    },
    "launchTemplateServer": {
      "Properties": {
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Fn::GetAtt": [
              "launchTemplate",
              "LaunchTemplateId"
            ]
          },
          "Version": "1"
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "publicSubnet",
            "SubnetId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "LaunchTemplateInstance"
          }
        ]
      },
      "Type": "AWS::EC2::Instance"
    },
    "privateServer": {
      "Properties": {
        "ImageId": "ami-0f3f13f145e66a0a3",
        "InstanceType": "t3.micro",
        "SubnetId": {
          "Fn::GetAtt": [
            "privateSubnet",
            "SubnetId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateInstance"
          }
        ]
      },
      "Type": "AWS::EC2::Instance"
    },
    "privateSubnet": {
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private"
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "publicDefaultRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Fn::GetAtt": [
            "igw",
            "InternetGatewayId"
          ]
        },
        "RouteTableId": {
          "Fn::GetAtt": [
            "publicRouteTable",
            "RouteTableId"
          ]
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "publicRouteTable": {
      "Properties": {
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "publicSubnet": {
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public"
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "publicSubnetRouteAssoc": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "publicRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "publicSubnet",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "unusedSecurityGroup": {
      "Properties": {
        "GroupDescription": "Unused security group",
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "vpc": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "ResourcesVpc"
          }
        ]
      },
      "Type": "AWS::EC2::VPC"
    },
    "webSecurityGroup": {
      "Properties": {
        "GroupDescription": "Allow specific inbound traffic",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow SSH access",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow HTTP access",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow HTTPS access",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "vpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "webServer": {
      "Properties": {
        "IamInstanceProfile": {
          "Ref": "instanceProfile"
        },
        "ImageId": "ami-0f3f13f145e66a0a3",
        "InstanceType": "t3.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "webSecurityGroup",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Fn::GetAtt": [
            "publicSubnet",
            "SubnetId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "WebServerInstance"
          }
        ]
      },
      "Type": "AWS::EC2::Instance"
    }
  }
}
